# true_battlebot

./: .gitignore  .gitmodules  LICENSE  README.md  depth.txt  image_version  last  mypy.ini  pyproject.toml  start
.devcontainer/: devcontainer.json  docker-compose.gpu-disable.yaml  docker-compose.gpu-enable.yaml  docker-compose.gpu.yaml  docker-compose.true_battlebot.yaml  docker-compose.yaml  post_create.sh  setup_container.sh
depthai_ros/: launch-depthai.sh
docker/: get_archive_filename  get_image_tag  get_organization  get_project_name  image_version  organization_name
install/: 99-zed.rules  download_zed_udev_rules.sh  install_depthai  install_docker_dependencies  install_nodenv  install_nvidia_container_toolkit  (+2 more)
ros_ws/bw_bringup/: CMakeLists.txt  package.xml  setup.py
ros_ws/bw_bringup/config/: maps.yaml  motion_tracking.yaml  robot_filter.yaml  tags.yaml  zed2i.yaml
ros_ws/bw_bringup/launch/: light_simulation.launch  mini_bot.launch  omni_light_simulation.launch  omni_simulation.launch  playback.launch  simulation.launch
ros_ws/bw_bringup/launch/subsystems/: camera.launch  common.launch  foxglove_bridge.launch  mini_bot_static_transforms.launch  playback_camera_conversion.launch  rosbridge.launch  simulation_static_transforms.launch  static_transforms.launch  synthetic_camera_conversion.launch  synthetic_point_cloud.launch  twist_mux.launch  unity.launch
ros_ws/bw_bringup/src/bw_bringup/: shared_config_node.py
src/bw_data/: CMakeLists.txt  package.xml
src/bw_data/data/models/: nhrl_dataset_mask_rcnn_R_50_FPN_3x_2023-11-20_metadata.json
(+2052 files in other folders)
