<?xml version="1.0"?>
<package format="2">
  <name>bw_bringup</name>
  <version>0.0.0</version>
  <description>The bw_bringup package</description>

  <maintainer email="bwbots@todo.todo">bwbots</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tf</exec_depend>

  <export>

  </export>
</package>